# mosquito-misting-controller

./: .gitignore  LICENSE  README.md  set_env.sh
api/: Dockerfile  README.md  cloudbuild.yaml  mm_api.py  requirements.txt
device_controller/: .gitignore  README.md  calibrate_device.py  cloud.py  config.json.template  config.json.template.json  constants.py  controller.py  create-account.py  device.py  device_sensors.py  device_test.py  deviceconfig.json.template.json  environment.py  mmctrl.service  mmsetup  pyproject.toml  register_device.py  requirements.txt  sdm-commands.txt  sdmfilelist  test.py  utils.py  visualcrossing.py  weatherstack.py  zone.py  zone_test.py
device_controller/mm_controller/: calibrate_device.py  cli.py  cloud.py  configurator.py  constants.py  controller.py  device.py  device_sensors.py  hx711.py  register_device.py  utils.py  visualcrossing.py  zone.py
device_controller/src/mm_controller/: calibrate_device.py  cli.py  cloud.py  constants.py  device.py  device_sensors.py  environment.py  utils.py  visualcrossing.py
device_controller/tests/: device_test.py  zone_test.py
diagrams/: MosquitoMax-smart-design.drawio  manufacturing-timeline.drawio  mm-controller-wiring.drawio
messaging/functions/: main.py
pcb/: BOM_MM_controller_gen8_2024-06-21.csv  PickAndPlace_1-PCB_PCB_MM-Controller_2024-06-21.csv
